# ferris-lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  main.rs  seccomp-profile.json
scripts/: run_agents.sh
src/: agent.rs  config.rs  executor.rs  lib.rs  main.rs  ollama.rs  output.rs  prompts.rs  search.rs  websocket.rs  writer.rs
tests/: peer_communication.rs
