[package]
name = "ferris-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dotenvy = "0.15"

[[bin]]
name = "ferris-lab"
path = "src/main.rs"
