[package]
name = "ferris-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dotenvy = "0.15"
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
rand = "0.9"
owo-colors = "4.2.3"
indicatif = "0.18.3"

[lib]
name = "ferris_lab"
path = "src/lib.rs"

[[bin]]
name = "ferris-lab"
path = "src/main.rs"
